--- a/css/styles.css
+++ b/css/styles.css
@@ -10135,5 +10135,5 @@ section.resume-section .resume-section-content {
   }
 }
 .bg-image {
-  background: url('../img/background.jpg');
+  background: url('assets\img\background.jpg');
 }
