--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ body {
 }
 
 body {
-  background-image: url("https://static.tumblr.com/743a26da2b89f72198339ff19e0fea20/gmtbo0y/mOPntvtnu/tumblr_static_ag62d8iqevc40840woocw8cgw.png");
+  background-image: url("../assets/img/background2.png");
   background-color: #cccccc;
   background-size: cover;
  }
